jenkins/sg.tf
resource "aws_security_group" "alb_sg" {
    vpc_id = aws_vpc.main.id

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = "0.0.0.0/0"
    }
}

resource "aws_security_group" "ec2_sg" {
    vpc_id = aws_vpc.main.id

    ingress{
        from_port = 80
        to_port = 80
        protocol = "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }

    ingress{
        from_port = 22
        to_port = 22
        protocol = "tcp"
        security_groups = ["0.0.0.0/32"]
        
    }
  
}

resource "aws_security_group" "rds_sg" {
    vpc_id = aws_vpc.main.id

    ingress{
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        security_groups = [ aws_security_group.ec2_sg.id ]
    }
  
}
